--- a/_bibliography/lichess.bib
+++ b/_bibliography/lichess.bib
@@ -1536,3 +1536,301 @@ BibTex
   archiveprefix = {arXiv},
   primaryclass  = {cs.AI},
 }
+
+@misc{skidanov:2025:behavior-based-knowledge-representation-improves-prediction-player-moves,
+  title         = {A Behavior-Based Knowledge Representation Improves Prediction of Players' Moves in Chess by 25\%},
+  author        = {Benny Skidanov and Daniel Erbesfeld and Gera Weiss and Achiya Elyasaf},
+  year          = {2025},
+  url           = {https://arxiv.org/abs/2504.05425},
+  eprint        = {2504.05425},
+  archiveprefix = {arXiv},
+  primaryclass  = {cs.LG},
+}
+
+@inproceedings{soliman:2026:caissa-ai-neuro-symbolic-chess-agent-explainable-move-suggestion-grounded-commentary,
+  title         = {Ca{\"i}ssa AI: A Neuro-Symbolic Chess Agent for~Explainable Move Suggestion and~Grounded Commentary},
+  author        = {Soliman, Mazen and Ehab, Nourhan},
+  year          = {2026},
+  booktitle     = {KI 2025: Advances in Artificial Intelligence},
+  publisher     = {Springer Nature Switzerland},
+  address       = {Cham},
+  pages         = {148--160},
+  isbn          = {978-3-032-02813-6},
+  editor        = {Braun, Tanya and Paa{\ss}en, Benjamin and Stolzenburg, Frieder},
+  abstract      = {Despite the impressive generative capabilities of large language models (LLMs), their lack of grounded reasoning and susceptibility to hallucinations limit their reliability in structured domains such as chess. We present Ca{\"i}ssa AI, a neuro-symbolic chess agent that augments LLM-generated move commentary with symbolic reasoning, knowledge graph integration, and verification modules. Ca{\"i}ssa AI combines a fine-tuned chess-specific LLM with a Prolog-based rule engine encoding chess tactics and rules, along with a dynamically constructed Neo4j knowledge graph representing the current board state. This hybrid architecture enables the system to generate not only accurate move suggestions but also coherent, strategically grounded commentary. A LangGraph-based verification module cross-checks LLM outputs against symbolic logic to ensure consistency and correctness, effectively mitigating hallucinations. By aligning data-driven generation with formal domain knowledge, Ca{\"i}ssa AI enhances both trustworthiness and explainability. Our results demonstrate that this tight neuro-symbolic integration produces verifiable, high-quality commentary and serves as a generalizable blueprint for AI systems requiring real-time, interpretable decision support.},
+  keywords      = {Neuro-Symbolic AI, Chess Agents, Explainable Reasoning},
+}
+
+@article{song:2023:investigation-sicilian-defense,
+  title         = {Investigation of the Sicilian Defense: Winning rates and strategic discrimination},
+  author        = {Song, Ziming},
+  year          = {2023},
+  journal       = {Interdisciplinary Humanities and Communication Studies},
+  volume        = {1},
+  number        = {4},
+}
+
+@misc{stanek:2024:bad-crypto-chessography-weak-randomness-chess-games,
+  title         = {Bad Crypto: Chessography and Weak Randomness of Chess Games},
+  author        = {Martin Stanek},
+  year          = {2024},
+  url           = {https://arxiv.org/abs/2412.09742},
+  eprint        = {2412.09742},
+  archiveprefix = {arXiv},
+  primaryclass  = {cs.CR},
+}
+
+@inproceedings{stockl:2021:watching-language-model-learning-chess,
+  title         = {Watching a Language Model Learning Chess},
+  author        = {St{\"o}ckl, Andreas},
+  year          = {2021},
+  month         = sep,
+  booktitle     = {Proceedings of the International Conference on Recent Advances in Natural Language Processing (RANLP 2021)},
+  publisher     = {INCOMA Ltd.},
+  address       = {Held Online},
+  pages         = {1369--1379},
+  url           = {https://aclanthology.org/2021.ranlp-1.153},
+  editor        = {Mitkov, Ruslan  and Angelova, Galia},
+  abstract      = {We analyse how a transformer-based language model learns the rules of chess from text data of recorded games. We show how it is possible to investigate how the model capacity and the available number of training data influence the learning success of a language model with the help of chess-specific metrics. With these metrics, we show that more games used for training in the studied range offers significantly better results for the same training time. However, model size does not show such a clear influence. It is also interesting to observe that the usual evaluation metrics for language models, predictive accuracy and perplexity, give no indication of this here. Further examination of trained models reveals how they store information about board state in the activations of neuron groups, and how the overall sequence of previous moves influences the newly-generated moves.},
+}
+
+@inproceedings{tang:2024:maia-2-unified-model-human-ai-alignment-chess,
+  title         = {Maia-2: a unified model for human-AI alignment in chess},
+  author        = {Tang, Zhenwei and Jiao, Difan and McIlroy-Young, Reid and Kleinberg, Jon and Sen, Siddhartha and Anderson, Ashton},
+  year          = {2025},
+  booktitle     = {Proceedings of the 38th International Conference on Neural Information Processing Systems},
+  location      = {Vancouver, BC, Canada},
+  publisher     = {Curran Associates Inc.},
+  address       = {Red Hook, NY, USA},
+  series        = {NeurIPS '24},
+  isbn          = {9798331314385},
+  abstract      = {There are an increasing number of domains in which artificial intelligence (AI) systems both surpass human ability and accurately model human behavior. This introduces the possibility of algorithmically-informed teaching in these domains through more relatable AI partners and deeper insights into human decision-making. Critical to achieving this goal, however, is coherently modeling human behavior at various skill levels. Chess is an ideal model system for conducting research into this kind of human-AI alignment, with its rich history as a pivotal testbed for AI research, mature superhuman AI systems like AlphaZero, and precise measurements of skill via chess rating systems. Previous work in modeling human decision-making in chess uses completely independent models to capture human style at different skill levels, meaning they lack coherence in their ability to adapt to the full spectrum of human improvement and are ultimately limited in their effectiveness as AI partners and teaching tools. In this work, we propose a unified modeling approach for human-AI alignment in chess that coherently captures human style across different skill levels and directly captures how people improve. Recognizing the complex, non-linear nature of human learning, we introduce a skill-aware attention mechanism to dynamically integrate players' strengths with encoded chess positions, enabling our model to be sensitive to evolving player skill. Our experimental results demonstrate that this unified framework significantly enhances the alignment between AI and human players across a diverse range of expertise levels, paving the way for deeper insights into human decision-making and AI-guided teaching tools. Our implementation is available https://github.com/CSSLab/maia2.},
+  articleno     = {659},
+  numpages      = {26},
+  github        = {https://github.com/CSSLab/maia2},
+  keywords      = {Human-AI Alignment, Action Prediction, Chess, Skill-aware Attention},
+}
+
+@misc{tang:2025:is-elo-rating-reliable-study-under-model-misspecification,
+  title         = {Is Elo Rating Reliable? A Study Under Model Misspecification},
+  author        = {Shange Tang and Yuanhao Wang and Chi Jin},
+  year          = {2025},
+  url           = {https://arxiv.org/abs/2502.10985},
+  eprint        = {2502.10985},
+  archiveprefix = {arXiv},
+  primaryclass  = {cs.LG},
+}
+
+@inproceedings{tang:2025:seam-semantically-equivalent-modalities-benchmark-vlm-vision-language-models,
+  title         = {{SEAM}: Semantically Equivalent Across Modalities Benchmark for Vision-Language Models},
+  author        = {Zhenwei Tang and Difan Jiao and Blair Yang and Ashton Anderson},
+  year          = {2025},
+  booktitle     = {Second Conference on Language Modeling},
+  url           = {https://openreview.net/forum?id=lI4LgGv4sX},
+  abstract      = {Evaluating whether vision-language models (VLMs) reason consistently across representations is challenging because modality comparisons are typically confounded by task differences and asymmetric information. We introduce SEAM, a benchmark that pairs semantically equivalent inputs across four domains that have existing standardized textual and visual notations. By employing distinct notation systems across modalities, in contrast to OCR-based image-text pairing, SEAM provides a rigorous comparative assessment of the textual-symbolic and visual-spatial reasoning capabilities of VLMs. Across 21 contemporary models, we observe systematic modality imbalance: vision frequently lags language in overall performance, despite the problems containing semantically equivalent information, and cross-modal agreement is relatively low. Our error analysis reveals two main drivers: textual perception failures from tokenization in domain notation and visual perception failures that induce hallucinations. We also show that our results are largely robust to visual transformations. SEAM establishes a controlled, semantically equivalent setting for measuring and improving modality-agnostic reasoning.},
+  github        = {https://github.com/CSSLab/SEAM},
+  huggingface   = {https://huggingface.co/datasets/lilvjosephtang/SEAM-Benchmark},
+  annote        = {https://lilv98.github.io/SEAM-Website/},
+}
+
+@inproceedings{tay:2023:social-status-competitors-cause-decision-maker-errors,
+  title         = {Can higher social status of competitors cause decision makers to commit more errors?},
+  author        = {Tay, Li Qian},
+  year          = {2023},
+  booktitle     = {Proceedings of the Annual Meeting of the Cognitive Science Society},
+  volume        = {45},
+  url           = {https://escholarship.org/uc/item/85d620jz},
+}
+
+@inproceedings{tijhuis:2023:predicting-chess-rating-single-game,
+  title         = {Predicting Chess Player Rating Based on a Single Game},
+  author        = {Tim Tijhuis and Paris Mavromoustakos Blom and Pieter Spronck},
+  year          = {2023},
+  booktitle     = {{IEEE} Conference on Games, CoG 2023, Boston, MA, USA, August 21-24, 2023},
+  publisher     = {{IEEE}},
+  pages         = {1--8},
+  doi           = {10.1109/COG57401.2023.10333133},
+  url           = {https://doi.org/10.1109/CoG57401.2023.10333133},
+}
+
+@book{urcan:2025:east-meets-east-inside-2024-world-chess-championship-singapore,
+  title         = {East Meets East: Inside The 2024 World Chess Championship In Singapore},
+  author        = {Urcan, Olimpiu G},
+  year          = {2025},
+  publisher     = {World Scientific Publishing Company},
+  doi           = {10.1142/14303},
+  isbn          = {9789819812820},
+  url           = {https://www.worldscientific.com/worldscibooks/10.1142/14303},
+  abstract      = {This book presents a compelling account of the historic FIDE world chess championship match between Ding Liren of China and Gukesh Dommaraju of India, held in Singapore from November 25 to December 13, 2024. Sponsored by Google, the 14-game match marked several significant milestones: the first All-Asian world chess championship, the first to be hosted in Singapore, and the momentous crowning of the youngest undisputed world chess champion in history. Through detailed reports, in-depth analyses of each game, and a curated collection of over a hundred quality photographs, the book explores the players' remarkable journeys, offering insights into their distinct playing styles, rigorous preparation, and the psychological challenges they faced both on and off the board. Set against the dynamic cultural backdrop of Singapore, it also examines the growing prominence of Asia in the world of chess. Combining strategic depth, expert commentary, and behind-the-scenes perspectives, this work provides an engaging narrative of resilience, rivalry, and excellence, making it an indispensable read for chess enthusiasts and sports aficionados.},
+}
+
+@thesis{vikstrom:2019:convolutional-neural-network-cnn-evaluate-chess-positions,
+  title         = {Training a Convolutional Neural Network to Evaluate Chess Positions},
+  author        = {Vikstr{\"o}m, Joel},
+  year          = {2019},
+  series        = {TRITA-EECS-EX},
+  number        = {2019:377},
+  pages         = {18},
+  type          = {Bachelor's thesis},
+  supervisor    = {Markidis, Stefano},
+  school        = {KTH, School of Electrical Engineering and Computer Science (EECS)},
+  abstract      = {Convolutional neural networks are typically applied to image analysis problems. We investigate whether a simple convolutional neural network can be trained to evaluate chess positions by means of predicting Stockfish (an existing chess engine) evaluations. Publicly available data from lichess.org was used, and we obtained a final MSE of 863.48 and MAE of 12.18 on our test dataset (with labels ranging from -255 to +255). To accomplish better results, we conclude that a more capable model architecture must be used.},
+}
+
+@misc{wang:2024:explore-reasoning-capability-llms-chess-testbed,
+  title         = {Explore the Reasoning Capability of LLMs in the Chess Testbed},
+  author        = {Shu Wang and Lei Ji and Renxi Wang and Wenxiao Zhao and Haokun Liu and Yifan Hou and Ying Nian Wu},
+  year          = {2024},
+  url           = {https://arxiv.org/abs/2411.06655},
+  eprint        = {2411.06655},
+  archiveprefix = {arXiv},
+  primaryclass  = {cs.CL},
+}
+
+@inproceedings{weissenberger:2025:massively-parallel-inverse-block-sorting-transforms-bzip2-decompression-gpu,
+  title         = {Massively Parallel Inverse Block-sorting Transforms for bzip2 Decompression on GPUs},
+  author        = {Wei{\ss}enberger, Andr{\'e} and Schmidt, Bertil},
+  year          = {2024},
+  booktitle     = {Proceedings of the 53rd International Conference on Parallel Processing},
+  location      = {Gotland, Sweden},
+  publisher     = {Association for Computing Machinery},
+  address       = {New York, NY, USA},
+  series        = {ICPP '24},
+  pages         = {856–865},
+  doi           = {10.1145/3673038.3673067},
+  isbn          = {9798400717932},
+  url           = {https://doi.org/10.1145/3673038.3673067},
+  abstract      = {Lossless data compression has evolved into an indispensable tool for reducing data transfer times in heterogeneous systems. However, performing decompression on host systems can create performance bottlenecks. Accelerator libraries, such as nvCOMP, address this problem by providing custom GPU-enabled versions of some general-purpose compression methods, including Snappy, ZStandard and gzip. However, popular bzip-like compression schemes, which rely on block-sorting transforms have not yet been integrated since their fine-grained parallelization is challenging. With a focus on decompression, we propose novel techniques for fine-grained parallelization of inverse Burrows-Wheeler transform (iBWT) and inverse Move-to-Front (iMTF) transform on GPUs, which enable efficient processing of bzip2-based archives on CUDA-enabled accelerators for the first time. Consequently, we present the first fully GPU-enabled bzip2 decompression pipeline as a use case for the proposed algorithms. Our experimental results reveal speedups of up to 6.1x over a multicore CPU implementation for iBWT, and throughput rates of up to 2400 MB/s for combined iBWT and iMTF on an A100 GPU. For decompression of bzip2 archives, a throughput of over 11.62 GB/s is achieved on a DGX H100 server. The source code of our parallel decoder implementation is available at https://github.com/weissenberger/bzip2gpu.},
+  numpages      = {10},
+  keywords      = {Burrows-Wheeler transform, CUDA, GPU, Move-to-front transform, accelerators, bzip2, data compression},
+}
+
+@inproceedings{wieczerzak:2022:dataset-experimental-investigation-chess-position-evaluation-neural-network,
+  title         = {Dataset Related Experimental Investigation of Chess Position Evaluation Using a Deep Neural Network},
+  author        = {Dawid Wieczerzak and Pawel Czarnul},
+  year          = {2022},
+  booktitle     = {Parallel Processing and Applied Mathematics - 14th International Conference, {PPAM} 2022, Gdansk, Poland, September 11-14, 2022, Revised Selected Papers, Part {I}},
+  publisher     = {Springer},
+  series        = {Lecture Notes in Computer Science},
+  volume        = {13826},
+  pages         = {429--440},
+  doi           = {10.1007/978-3-031-30442-2\_32},
+  url           = {https://doi.org/10.1007/978-3-031-30442-2\_32},
+  editor        = {Roman Wyrzykowski and Jack J. Dongarra and Ewa Deelman and Konrad Karczewski},
+}
+
+@inproceedings{woodruff:2024:predicting-chess-puzzle-difficulty,
+  title         = {{The bread emoji Team's Submission to the IEEE BigData 2024 Cup: Predicting Chess Puzzle Difficulty Challenge}},
+  author        = {Tyler Woodruff and Oleg Filatov and Marco Cognetta},
+  year          = {2024},
+  booktitle     = {{IEEE} International Conference on Big Data, Big Data 2024, Washington DC, USA, December 15-18, 2024},
+  publisher     = {{IEEE}},
+}
+
+@inproceedings{yamada:2023:estimating-online-ratings-decision-tree,
+  title         = {A Method for Estimating Online Chess Game Player Ratings with Decision Tree},
+  author        = {Habuki Yamada and Nobuko Kishi and Masato Oguchi and Miyuki Nakano},
+  year          = {2023},
+  booktitle     = {{IEEE} International Conference on Big Data and Smart Computing, BigComp 2023, Jeju, Republic of Korea, February 13-16, 2023},
+  publisher     = {{IEEE}},
+  pages         = {320--321},
+  doi           = {10.1109/BIGCOMP57234.2023.00066},
+  url           = {https://doi.org/10.1109/BigComp57234.2023.00066},
+  editor        = {Hyeran Byun and Beng Chin Ooi and Katsumi Tanaka and Sang{-}Won Lee and Zhixu Li and Akiyo Nadamoto and Giltae Song and Young{-}Guk Ha and Kazutoshi Sumiya and Yuncheng Wu and Hyuk{-}Yoon Kwon and Takehiro Yamamoto},
+}
+
+@misc{yang:2025:mixture-experts-intrinsically-interpretable,
+  title         = {Mixture of Experts Made Intrinsically Interpretable},
+  author        = {Xingyi Yang and Constantin Venhoff and Ashkan Khakzar and Christian Schroeder de Witt and Puneet K. Dokania and Adel Bibi and Philip Torr},
+  year          = {2025},
+  url           = {https://arxiv.org/abs/2503.07639},
+  eprint        = {2503.07639},
+  archiveprefix = {arXiv},
+  primaryclass  = {cs.LG},
+}
+
+@inproceedings{ye:2025:implicit-search-discrete-diffusion-study-chess,
+  title         = {Implicit Search via Discrete Diffusion: {A} Study on Chess},
+  author        = {Jiacheng Ye and Zhenyu Wu and Jiahui Gao and Zhiyong Wu and Xin Jiang and Zhenguo Li and Lingpeng Kong},
+  year          = {2025},
+  booktitle     = {The Thirteenth International Conference on Learning Representations, {ICLR} 2025, Singapore, April 24-28, 2025},
+  publisher     = {OpenReview.net},
+  url           = {https://openreview.net/forum?id=A9y3LFX4ds},
+  abstract      = {In the post-AlphaGo era, there has been a renewed interest in search techniques such as Monte Carlo Tree Search (MCTS), particularly in their application to Large Language Models (LLMs). This renewed attention is driven by the recognition that current next-token prediction models often lack the ability for long-term planning. Is it possible to instill search-like abilities within the models to enhance their planning abilities without relying on explicit search? We propose DiffuSearch , a model that does \textit{implicit search} by looking into the future world via discrete diffusion modeling. We instantiate DiffuSearch on a classical board game, Chess, where explicit search is known to be essential. Through extensive controlled experiments, we show DiffuSearch outperforms both the searchless and explicit search-enhanced policies. Specifically, DiffuSearch outperforms the one-step policy by 19.2\% and the MCTS-enhanced policy by 14\% on action accuracy. Furthermore, DiffuSearch demonstrates a notable 30\% enhancement in puzzle-solving abilities compared to explicit search-based policies, along with a significant 540 Elo increase in game-playing strength assessment. These results indicate that implicit search via discrete diffusion is a viable alternative to explicit search over a one-step policy. All codes are publicly available at \href{https://github.com/HKUNLP/DiffuSearch}{https://github.com/HKUNLP/DiffuSearch}},
+  tldr          = {We propose a model that does implicit search by looking into the future world via discrete diffusion modeling.},
+  keywords      = {discrete diffusion model, search, planning, chess, MCTS},
+  github        = {https://github.com/HKUNLP/DiffuSearch},
+  huggingface   = {https://huggingface.co/datasets/jiacheng-ye/chess10k},
+}
+
+@inproceedings{yohanes:2024:chess-piece-image-recognition-nn-cnn,
+  title         = {Chess Piece Image Recognition Using Transfer Learning, Simple Neural Network, and Convolutional Neural Network},
+  author        = {Yohanes, Gabriel and Nursalim, Mario and Nicholas and Kurniadi, Felix Indra},
+  year          = {2023},
+  booktitle     = {2023 4th International Conference on Artificial Intelligence and Data Sciences (AiDAS)},
+  pages         = {160--164},
+  doi           = {10.1109/AiDAS60501.2023.10284718},
+  keywords      = {Training;Image recognition;Computational modeling;Transfer learning;Neural networks;Software;Real-time systems;Chess Pieces;CNN;Transfer Learning;Simple Neural Network;Image Recognition},
+}
+
+@misc{yu:2025:biological-processing-units-leveraging-insect-connectome-pioneer-biofidelic-neural-architectures,
+  title         = {Biological Processing Units: Leveraging an Insect Connectome to Pioneer Biofidelic Neural Architectures},
+  author        = {Siyu Yu and Zihan Qin and Tingshan Liu and Beiya Xu and R. Jacob Vogelstein and Jason Brown and Joshua T. Vogelstein},
+  year          = {2025},
+  url           = {https://arxiv.org/abs/2507.10951},
+  eprint        = {2507.10951},
+  archiveprefix = {arXiv},
+  primaryclass  = {cs.NE},
+}
+
+@article{zaidi:2024:predicting-user-perception-move-brilliance-chess,
+  title         = {Predicting User Perception of Move Brilliance in Chess},
+  author        = {Kamron Zaidi and Michael Guerzhoy},
+  year          = {2024},
+  journal       = {CoRR},
+  volume        = {abs/2406.11895},
+  doi           = {10.48550/ARXIV.2406.11895},
+  url           = {https://doi.org/10.48550/arXiv.2406.11895},
+  eprinttype    = {arXiv},
+  eprint        = {2406.11895},
+}
+
+@thesis{zelek:2022:topological-data-analysis-chess,
+  title         = {Topological Data Analysis in chess},
+  author        = {Zelek, Jakub},
+  year          = {2022},
+  note          = {https://ruj.uj.edu.pl/xmlui/handle/item/295689},
+  school        = {Jagiellonian University},
+  type          = {Master's thesis},
+  keywords      = {Chess, Topological Data Analysis, Design Patterns, Data modeling, Modules, Category theory, Topology},
+  annote        = {This thesis uses Topological Data Analysis to examine the data collectedfrom the lichess.org portal. The analysis was based on the games of players playing at different levels. The purpose of the analysis was to distinguish groups of players and players with the highest ranking from eachother. Each player's game is represented by a multidimensional vectorthat encodes information about the course of the game. There are threeapproaches to creating this vector, allowing us to focus on different aspects of the chess game. The proposed analysis was carried out with theintention of verifying the Topological Data Analysis as a tool for analyzing chess games. As a result, it was shown that Topological Data Analysiscan be a potential tool for recognizing the quality of a given player, if wehave enough number of his games, and to reconstruct player rankings. Asignificant result is also the potential for further research for which this thesis could be the foundation.},
+}
+
+@misc{zhang:2025:general-search-techniques-common-knowledge-imperfect-information-games-fog-of-war-chess,
+  title         = {General search techniques without common knowledge for imperfect-information games, and application to superhuman Fog of War chess},
+  author        = {Brian Hu Zhang and Tuomas Sandholm},
+  year          = {2025},
+  url           = {https://arxiv.org/abs/2506.01242},
+  eprint        = {2506.01242},
+  archiveprefix = {arXiv},
+  primaryclass  = {cs.GT},
+}
+
+@inproceedings{zhang:2025:human-aligned-chess-bit-of-search,
+  title         = {Human-Aligned Chess With a Bit of Search},
+  author        = {Yiming Zhang and Athul Paul Jacob and Vivian Lai and Daniel Fried and Daphne Ippolito},
+  year          = {2025},
+  booktitle     = {The Thirteenth International Conference on Learning Representations, {ICLR} 2025, Singapore, April 24-28, 2025},
+  publisher     = {OpenReview.net},
+  url           = {https://openreview.net/forum?id=bc2H72hGxB},
+  abstract      = {Chess has long been a testbed for AI's quest to match human intelligence, and in recent years, chess AI systems have surpassed the strongest humans at the game. However, these systems are not human-aligned; they are unable to match the skill levels of all human partners or model human-like behaviors beyond piece movement. In this paper, we introduce Allie, a chess-playing AI designed to bridge the gap between artificial and human intelligence in this classic game. Allie is trained on log sequences of real chess games to model the behaviors of human chess players across the skill spectrum, including non-move behaviors such as pondering times and resignations In offline evaluations, we find that Allie exhibits humanlike behavior: it outperforms the existing state-of-the-art in human chess move prediction and ponders at critical positions. The model learns to reliably assign reward at each game state, which can be used at inference as a reward function in a novel time-adaptive Monte-Carlo tree search (MCTS) procedure, where the amount of search depends on how long humans would think in the same positions. Adaptive search enables remarkable skill calibration; in a large-scale online evaluation against players with ratings from 1000 to 2600 Elo, our adaptive search method leads to a skill gap of only 49 Elo on average, substantially outperforming search-free and standard MCTS baselines. Against grandmaster-level (2500 Elo) opponents, Allie with adaptive search exhibits the strength of a fellow grandmaster, all while learning exclusively from humans.},
+  keywords      = {chess, alignment, adaptive MCTS, inference-time scaling},
+}
+
+@inproceedings{zysko:2024:predicting-chess-puzzle-difficulty,
+  title         = {{IEEE Big Data Cup 2024 Report: Predicting Chess Puzzle Difficulty at KnowledgePit.ai}},
+  author        = {Jan Zy\'sko and Maciej \'Swiechowski and Sebastian Stawicki and Katarzyna Jagie{\l}a and Andrzej Janusz and  Dominik \'{S}l\k{e}zak},
+  year          = {2024},
+  booktitle     = {{IEEE} International Conference on Big Data, Big Data 2024, Washington DC, USA, December 15-18, 2024},
+  publisher     = {{IEEE}},
+}
